--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "npm": "^5.8.0",
     "request": "^2.79.0",
     "winston": "^2.3.0"
   }
